# llm-3d

./: .gitignore  README.md  config.py  dev.env.example  eval_image_to_3d_code.py  prepare_objaverse_data.py  pyproject.toml
bpy_lib/: __init__.py  bpy_lib.py
bpy_lib/tests/: test_bpy_lib.py
configs/: config.yaml  default.yaml  dev_5.yaml  structured.py
configs/experiment/: gate_ablation.yaml  reward_sweep.yaml
configs/reward/: aggressive_gates.yaml  clip_heavy.yaml  default.yaml  geometry_heavy.yaml
configs/rl/: default.yaml  fast_iter.yaml  long_run.yaml
configs/sft/: default.yaml
data/: adapters.py  caption_joiner.py  dataset_adapters.py  dataset_builder.py  dataset_preprocessor.py  default.yaml  formatting.py  generate_selfplay.py  hard_prompts.py  infinigen_extractor.py  manifest.jsonl  models.py  no_meshcoder.yaml  objaverse_filter.py  object_assembler.py  part_fitter.py  part_generator.py  processing.py  requirements.txt  run.py  sampling.py  storage.py  synthetic_generator.py
data/configs/: categories.yaml
environments/blender_3d/: __init__.py  blender_3d.py  dataset.py  harness.py  rubric.py
eval_pipeline/: __init__.py  config.py  dataset.py  execution.py  llm.py  metrics.py  pipeline.py  prompt.py  rendering.py  results.py
modal_infra/: blender_worker.py  data_worker.py  images.py  metrics_worker.py  render_worker.py  reward_server.py
scripts/: build_manifest.sh  build_object_dataset.sh  deploy_reward_api.sh  filter_objaverse.sh  generate_parts.sh  generate_synthetic_data.sh  load_dev_env.sh  preload_modal_meshes.sh  preprocess_dataset.sh  run_dev_pipeline.sh  run_eval.sh  run_rl.sh  run_sft.sh  sync_to_hf.sh
tests/: test_rubric.py  test_storage.py  test_synthetic_generator.py
tools/obj-viewer/: index.html  server.ts  viewer.js
training/: eval_runner.py  rl_trainer.py  sft_trainer.py  wandb_logger.py
training/configs/: eval_config.yaml  rl_config.yaml  sft_config.yaml
